[package]
name = "reqwest-negotiate"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Kerberos/SPNEGO Negotiate authentication for reqwest"
repository = "https://github.com/tom-lubenow/reqwest-negotiate"
keywords = ["kerberos", "spnego", "negotiate", "reqwest", "authentication"]
categories = ["authentication", "web-programming::http-client"]

[dependencies]
reqwest = { version = "0.13", default-features = false }
libgssapi = "0.7"
base64 = "0.22"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.13", features = ["default-tls"] }
